@@ -350,12 +350,15 @@ boolean I_SoundIsPlaying(int handle)
 }
 
 
-boolean I_AnySoundIsPlaying(void)
+boolean I_AnySoundStillPlaying(void)
 {
   boolean result = false;
   int i;
 
-  
+  for (i=0; i<MAX_CHANNELS; i++)
+    result |= channelinfo[i].data != NULL;
+
+  return result;
 }
 
 
